# covenants

./: .gitignore  Cargo.toml  LICENSE  README.md  go.work  go.work.sum  justfile  optimize.sh  schemagen.sh
contracts/astroport-liquid-pooler/: Cargo.toml  README.md
contracts/astroport-liquid-pooler/.cargo/: config.toml
contracts/astroport-liquid-pooler/examples/: schema.rs
contracts/astroport-liquid-pooler/schema/: covenant-astroport-liquid-pooler.json  valence-astroport-liquid-pooler.json
contracts/astroport-liquid-pooler/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/astroport-tf-liquid-pooler/: Cargo.toml  README.md
contracts/astroport-tf-liquid-pooler/schema/: valence-astroport-liquid-pooler.json
contracts/astroport-tf-liquid-pooler/src/: contract.rs  lib.rs
contracts/clock/: Cargo.toml  README.md
contracts/clock/.cargo/: config.toml
contracts/clock/schema/: covenant-clock.json  valence-clock.json
contracts/clock/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs
contracts/covenant/: Cargo.toml  README.md
contracts/covenant/examples/: schema.rs
contracts/covenant/schema/: covenant-covenant.json
contracts/covenant/src/: contract.rs  error.rs  instantiate2.rs  lib.rs  msg.rs  state.rs
contracts/depositor/: Cargo.toml  README.md
contracts/depositor/.cargo/: config
contracts/depositor/examples/: schema.rs
contracts/depositor/schema/: covenant-depositor.json  execute_msg.json  instantiate_msg.json  query_msg.json
contracts/depositor/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/interchain-router/: Cargo.toml  README.md
contracts/interchain-router/.cargo/: config.toml
contracts/interchain-router/schema/: covenant-interchain-router.json  valence-interchain-router.json
contracts/interchain-router/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/lper/: Cargo.toml
contracts/lper/examples/: schema.rs
contracts/lper/schema/: covenant-lp.json
contracts/lper/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/ls/: Cargo.toml
contracts/ls/.cargo/: config
contracts/ls/examples/: schema.rs
contracts/ls/schema/: covenant-ls.json
contracts/ls/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/native-splitter/: Cargo.toml  README.md
contracts/native-splitter/.cargo/: config.toml
contracts/native-splitter/schema/: covenant-native-splitter.json  valence-native-splitter.json
contracts/native-splitter/src/: contract.rs  error.rs  msg.rs  state.rs  sudo.rs
contracts/osmo-liquid-pooler/: Cargo.toml  README.md
contracts/osmo-liquid-pooler/.cargo/: config.toml
contracts/osmo-liquid-pooler/schema/: valence-osmo-liquid-pooler.json
contracts/osmo-liquid-pooler/src/: contract.rs  error.rs  lib.rs  msg.rs  polytone_handlers.rs  state.rs
contracts/outpost-osmo-liquid-pooler/: Cargo.toml  README.md
contracts/outpost-osmo-liquid-pooler/.cargo/: config.toml
contracts/outpost-osmo-liquid-pooler/schema/: valence-outpost-osmo-liquid-pooler.json
contracts/outpost-osmo-liquid-pooler/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/remote-chain-splitter/: Cargo.toml  README.md
contracts/remote-chain-splitter/.cargo/: config.toml
contracts/remote-chain-splitter/schema/: covenant-remote-chain-splitter.json  valence-remote-chain-splitter.json
contracts/remote-chain-splitter/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  sudo.rs
contracts/single-party-pol-holder/: Cargo.toml  README.md
contracts/single-party-pol-holder/.cargo/: config.toml
contracts/single-party-pol-holder/schema/: covenant-single-party-pol-holder.json  valence-single-party-pol-holder.json
contracts/single-party-pol-holder/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/stride-liquid-staker/: Cargo.toml  README.md  json.json
contracts/stride-liquid-staker/.cargo/: config.toml
contracts/stride-liquid-staker/examples/: schema.rs
contracts/stride-liquid-staker/schema/: covenant-stride-liquid-staker.json  valence-stride-liquid-staker.json
contracts/stride-liquid-staker/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs
contracts/swap-holder/: Cargo.toml  README.md
contracts/swap-holder/.cargo/: config.toml
contracts/swap-holder/schema/: covenant-swap-holder.json  valence-swap-holder.json
contracts/swap-holder/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/two-party-pol-covenant/: Cargo.toml  README.md
contracts/two-party-pol-covenant/.cargo/: config.toml
contracts/two-party-pol-covenant/schema/: covenant-two-party-pol.json  valence-covenant-two-party-pol.json
contracts/two-party-pol-covenant/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/two-party-pol-holder/: Cargo.toml  README.md
contracts/two-party-pol-holder/.cargo/: config.toml
contracts/two-party-pol-holder/schema/: covenant-two-party-pol-holder.json  valence-two-party-pol-holder.json
contracts/two-party-pol-holder/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
local-interchaintest/: Cargo.toml  Makefile  README.md
local-interchaintest/chains/: base.json  gaia.json  juno_ibc.json  neutron_gaia.json  neutron_gaia_osmosis_stride.json
local-interchaintest/configs/: logs.json  relayer.json  server.json
local-interchaintest/contracts/astroport/: astroport_factory.wasm  astroport_factory_osmosis.wasm  astroport_generator.wasm  astroport_liquidity_manager.wasm  astroport_maker.wasm  astroport_maker_osmosis.wasm  astroport_native_coin_registry.wasm  astroport_pair.wasm  astroport_pair_stable.wasm  astroport_pcl_osmo.wasm  astroport_router.wasm  astroport_staking.wasm  astroport_vesting.wasm  astroport_whitelist.wasm
local-interchaintest/contracts/valence/: valence_astroport_liquid_pooler.wasm  valence_clock.wasm  valence_clock_tester.wasm  valence_covenant_single_party_pol.wasm  valence_covenant_swap.wasm  (+12 more)
local-interchaintest/src/: base.rs  chain_tests.rs  ibc_helpers.rs  lib.rs  main.rs  test_context.rs  utils.rs
unit-tests/: Cargo.toml
unit-tests/src/: lib.rs  test.rs
v1/holder/: Cargo.toml
(+407 files in other folders)
