[workspace]
members = [
  "packages/*",
  "contracts/astroport-liquid-pooler",
  "contracts/clock",
  "contracts/clock-tester",
  "contracts/ibc-forwarder",
  "contracts/interchain-router",
  "contracts/interchain-splitter",
  "contracts/native-splitter",
  "contracts/swap-covenant",
  "contracts/swap-holder",
  "contracts/two-party-pol-holder",
  "contracts/two-party-pol-covenant",
]
exclude = [
  "contracts/covenant",
  "contracts/depositor",
  "contracts/ls",
  "contracts/holder",
  "contracts/lper",
]

[workspace.package]
edition      = "2021"
license      = "Apache-2.0"
version      = "1.0.0"
repository = "https://github.com/timewave-computer/covenants"
rust-version = "1.66"

[workspace.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.1
"""

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true    # very important, do not turn these off.
panic            = 'abort'
rpath            = false

[workspace.dependencies]
# covenant-depositor       = { path = "contracts/depositor" }
# covenant-lp = { path = "contracts/lper" }
covenant-clock = { path = "contracts/clock" }
covenant-clock-tester = { path = "contracts/clock-tester" }
# covenant-ls = { path = "contracts/ls" }
# covenant-holder = { path = "contracts/holder" }
covenant-ibc-forwarder = { path = "contracts/ibc-forwarder" }
covenant-native-splitter = { path = "contracts/native-splitter" }
covenant-interchain-splitter = { path = "contracts/interchain-splitter" }
covenant-swap-holder = { path = "contracts/swap-holder" }
swap-covenant = { path = "contracts/swap-covenant" }
covenant-interchain-router = { path = "contracts/interchain-router" }
covenant-two-party-pol-holder = { path = "contracts/two-party-pol-holder" }
covenant-two-party-pol = { path = "contracts/two-party-pol-covenant" }
covenant-astroport-liquid-pooler = { path = "contracts/astroport-liquid-pooler" }

# packages
clock-derive = { path = "packages/clock-derive" }
cw-fifo = { path = "packages/cw-fifo" }
covenant-macros = { path = "packages/covenant-macros" }
covenant-utils = { path = "packages/covenant-utils" }
# the sha2 version here is the same as the one used by
# cosmwasm-std. when bumping cosmwasm-std, this should also be
# updated. to find cosmwasm_std's sha function:
# ```cargo tree --package cosmwasm-std```
sha2 = "0.10.6"
neutron-sdk = { git = "https://github.com/neutron-org/neutron-sdk", default-features = false }
cosmos-sdk-proto = { version = "0.14.0", default-features = false }
protobuf = { version = "3.2.0", features = ["with-bytes"] }
serde-json-wasm = { version = "0.4.1" }
base64 = "0.13.0"
prost = "0.11"
astroport = "2.9.0"
prost-types = "0.11"
bech32 = "0.9.0"
cosmwasm-schema = "1.2.1"
cosmwasm-std    = { version = "1.2.3", features = ["ibc3"] }
cw-storage-plus = "1.0.1"
cw-utils        = "1.0.2"
cw2             = "1.0.1"
serde     = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
schemars = "0.8.10"
cw20             = { version = "0.15" }
proc-macro2       = "1"
quote             = "1"
syn               = "1"

# dev-dependencies
cw-multi-test   = "0.16.2"
anyhow          = { version = "1.0.51" }
cw1-whitelist = "1.1.0"
astroport-token = {git = "https://github.com/astroport-fi/astroport-core.git"}
astroport-whitelist = {git = "https://github.com/astroport-fi/astroport-core.git"}
astroport-factory =  {git = "https://github.com/astroport-fi/astroport-core.git"}
astroport-native-coin-registry = {git = "https://github.com/astroport-fi/astroport-core.git"}
astroport-pair-stable = {git = "https://github.com/astroport-fi/astroport-core.git"}
