[package]
name = "local-ictest-e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
localic-std = { git = "https://github.com/strangelove-ventures/interchaintest", branch = "main" }
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
serde_json = "1.0.119"
serde = { version = "1.0.203", features = ["derive"] }
cosmwasm-std = "1.5.5"
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", rev = "700f66d" }
sha2.workspace = true
anyhow.workspace = true
