[package]
name = "local-ictest-e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
localic-std = { git = "https://github.com/strangelove-ventures/interchaintest", branch = "main" }
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
serde_json = "1.0.119"
serde = { version = "1.0.203", features = ["derive"] }
cosmwasm-std = "1.5.5"
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", rev = "700f66d" }
localic-utils = { git = "https://github.com/timewave-computer/localic-utils", branch = "main" }
sha2 = "0.10.8"
anyhow = "1.0.86"
env_logger = "0.11.3"
log = "0.4.22"
polytone-note = { git = "https://github.com/DA0-DA0/polytone", rev = "a94feae" }
polytone-voice = { git = "https://github.com/DA0-DA0/polytone", rev = "a94feae" }
cw-utils = { workspace = true }
valence-covenant-two-party-pol = { workspace = true }
valence-covenant-single-party-pol = { workspace = true }
valence-two-party-pol-holder = { workspace = true }
valence-single-party-pol-holder = { workspace = true }
valence-astroport-liquid-pooler = { workspace = true }
valence-osmo-liquid-pooler = { workspace = true }
valence-outpost-osmo-liquid-pooler = { workspace = true }
valence-stride-liquid-staker = { workspace = true }
valence-ibc-forwarder = { workspace = true }

covenant-utils = { workspace = true }
cw20 = { workspace = true }
