[package]
name        = "covenant-astroport-liquid-pooler"
authors     = ["benskey bekauz@protonmail.com"]
description = "Astroport liquid pooler contract for covenants"
license     = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }
edition     = { workspace = true }
# rust-version = { workspace = true }

exclude = [
  "contract.wasm",
  "hash.txt",
]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
covenant-macros = { workspace = true }
covenant-clock        = { workspace = true, features=["library"] }

cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
# the sha2 version here is the same as the one used by
# cosmwasm-std. when bumping cosmwasm-std, this should also be
# updated. to find cosmwasm_std's sha function:
# ```cargo tree --package cosmwasm-std```
sha2             = { workspace = true }
neutron-sdk      = { workspace = true }
protobuf         = { workspace = true }
schemars         = { workspace = true }
bech32           = { workspace = true }
astroport        = { workspace = true }
cw20             = { workspace = true }

# dev-dependencies
[dev-dependencies]
cw-multi-test = { workspace = true }
astroport = { workspace = true }
cw1-whitelist = { workspace = true }
covenant-two-party-pol-holder = { workspace = true }
astroport-token = { workspace = true }
astroport-whitelist = { workspace = true }
astroport-factory = { workspace = true }
astroport-native-coin-registry = { workspace = true }
astroport-pair-stable = { workspace = true }
