[package]
name        = "valence-astroport-tf-liquid-pooler"
authors     = ["benskey bekauz@protonmail.com"]
description = "Astroport tokenfactory liquid pooler contract for covenants"
edition    = "2021"
license    = "Apache-2.0"
version    = "0.1.1"
repository = "https://github.com/timewave-computer/covenants"

# rust-version = { workspace = true }

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
covenant-macros = { git = "https://github.com/timewave-computer/covenants", tag = "v0.1.0" }
valence-clock  = { git = "https://github.com/timewave-computer/covenants", tag = "v0.1.0", features = ["library"] }

cosmwasm-schema  = "1.5.0"
cosmwasm-std = { version = "1.5.4", features = [
  "ibc3",
  "cosmwasm_1_1",
  "cosmwasm_1_2",
] }
cw-storage-plus = "1.2.0"
cw-utils        = "1.0.3"
cw2             = "1.0.1"
serde           = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror       = "1.0.31"
# the sha2 version here is the same as the one used by
# cosmwasm-std. when bumping cosmwasm-std, this should also be
# updated. to find cosmwasm_std's sha function:
# ```cargo tree --package cosmwasm-std```
sha2             = "0.10.8"
neutron-sdk      = { git = "https://github.com/neutron-org/neutron-sdk", tag = "v0.8.0" }
schemars        = "0.8.10"
bech32           = "0.9.0"


astroport                      = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.0.0" }
astroport-xastro-token         = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.0.0" }
astroport-factory              = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.0.0" }
astroport-native-coin-registry = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.0.0" }
astroport-pair-stable          = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.0.0" }
astroport-pair-concentrated    = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.0.0" }
astroport-pair                 = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v5.0.0" }

cw20            = { version = "0.15.1" }
covenant-utils = { git = "https://github.com/timewave-computer/covenants", tag = "v0.1.0" }
