[package]
name = "covenant-covenant"
edition = { workspace = true }
authors = ["benskey bekauz@protonmail.com"]
description = "Covenant module"
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

exclude = [
  "contract.wasm",
  "hash.txt",
]


[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
neutron-sdk = { workspace = true }
cosmos-sdk-proto = { workspace = true }
protobuf = { workspace = true }
schemars = { workspace = true }
serde-json-wasm = { workspace = true }
base64 = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
bech32 ={ workspace = true }

[dev-dependencies]
cw-multi-test   = { workspace = true }
anyhow          = { workspace = true }
