[package]
name        = "covenant-interchain-router"
edition     = { workspace = true }
authors     = ["benskey bekauz@protonmail.com"]
description = "Interchain router contract for covenants"
license     = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }
# rust-version = { workspace = true }

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
covenant-macros  = { workspace = true }
covenant-clock   = { workspace = true, features = ["library"] }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw-storage-plus  = { workspace = true }
cw2              = { workspace = true }
serde            = { workspace = true }
thiserror        = { workspace = true }
sha2             = { workspace = true }
neutron-sdk      = { workspace = true }
cosmos-sdk-proto = { workspace = true }
schemars         = { workspace = true }
prost            = { workspace = true }
prost-types      = { workspace = true }
bech32           = { workspace = true }
covenant-utils   = { workspace = true }
cw-utils         = { workspace = true }
semver          = { workspace = true }

[dev-dependencies]
cw-multi-test  = { workspace = true }
anyhow         = { workspace = true }
covenant-clock = { workspace = true }

