[package]
name = "covenant-lper"
authors = ["benskey bekauz@protonmail.com"]
description = "LP module for stride covenant"
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

exclude = [
  "contract.wasm",
  "hash.txt",
]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
# the sha2 version here is the same as the one used by
# cosmwasm-std. when bumping cosmwasm-std, this should also be
# updated. to find cosmwasm_std's sha function:
# ```cargo tree --package cosmwasm-std```
sha2 = { workspace = true }
neutron-sdk = { workspace = true }
cosmos-sdk-proto = { workspace = true }
protobuf = { workspace = true }
schemars = { workspace = true }
serde-json-wasm = { workspace = true }
base64 = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
bech32 = { workspace = true }
# astroport = { workspace = true }
cw20 = { version = "0.15" }
astroport = { git = "https://github.com/astroport-fi/astroport-core.git" }

# dev-dependencies
[dev-dependencies]
cw-multi-test   = { workspace = true }
astroport-token = {git = "https://github.com/astroport-fi/astroport-core.git"}
astroport-whitelist = {git = "https://github.com/astroport-fi/astroport-core.git"}
astroport-factory =  {git = "https://github.com/astroport-fi/astroport-core.git"}
astroport-native-coin-registry = {git = "https://github.com/astroport-fi/astroport-core.git"}
astroport-pair-stable = {git = "https://github.com/astroport-fi/astroport-core.git"}
cw1-whitelist = "1.1.0"