[package]
name        = "covenant-lper"
authors     = ["benskey bekauz@protonmail.com"]
description = "LP module for stride covenant"
license     = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }
edition     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
covenant-clock-derive = { workspace = true }
covenant-clock        = { workspace = true }

cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
# the sha2 version here is the same as the one used by
# cosmwasm-std. when bumping cosmwasm-std, this should also be
# updated. to find cosmwasm_std's sha function:
# ```cargo tree --package cosmwasm-std```
sha2             = { workspace = true }
neutron-sdk      = { workspace = true }
cosmos-sdk-proto = { workspace = true }
protobuf         = { workspace = true }
schemars         = { workspace = true }
serde-json-wasm  = { workspace = true }
base64           = { workspace = true }
prost            = { workspace = true }
prost-types      = { workspace = true }
bech32           = { workspace = true }
astroport        = "2.8.0"
cw20             = { version = "0.15" }

# dev-dependencies
[dev-dependencies]
cw-multi-test = { workspace = true }
